[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/characters/actual_characters_folder/ACow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Background/grass.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/LevelTemplate.gd" type="Script" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://Scene/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=8]

[node name="LevelTemplate" type="Spatial"]
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1.62921e-07, 0.490858, -0.871239, 0, 0.871239, 0.490858, 1, 7.99711e-08, -1.41943e-07, -35.8693, 30.7267, 0 )
light_color = Color( 0.94902, 0.945098, 0.615686, 1 )
light_energy = 3.5
shadow_enabled = true
shadow_color = Color( 0.262745, 0.0588235, 0.45098, 1 )

[node name="CameraBody" type="KinematicBody" parent="."]
script = ExtResource( 8 )

[node name="Camera" type="Camera" parent="CameraBody"]
transform = Transform( -1.62921e-07, 0.543233, -0.839582, 0, 0.839582, 0.543233, 1, 8.85041e-08, -1.36786e-07, -31.605, 30, 15.867 )
current = true

[node name="CMovementTimer" type="Timer" parent="CameraBody"]
wait_time = 2.0
one_shot = true

[node name="Floor" parent="." instance=ExtResource( 1 )]

[node name="Background" type="Node" parent="."]

[node name="grass" parent="Background" instance=ExtResource( 3 )]

[node name="Characters" type="Node" parent="."]

[node name="ACow" parent="Characters" instance=ExtResource( 2 )]

[node name="Roads" type="Node" parent="."]

[node name="Cars" type="Node" parent="."]

[node name="SpawningAreas" type="Node" parent="."]

[node name="Home" type="Node" parent="."]

[node name="GameoverTimer" type="Timer" parent="."]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="SuprespeedTimer" type="Timer" parent="."]

[node name="GUI" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="CameraBody/CMovementTimer" to="CameraBody" method="_on_CMovementTimer_timeout"]
[connection signal="timeout" from="GameoverTimer" to="." method="_on_GameoverTimer_timeout"]

[editable path="Characters/ACow"]
